--- a/Team Skills And Stats/index.html
+++ b/Team Skills And Stats/index.html
@@ -28,24 +28,24 @@
     
     <section id="second" class="flex justifyBet">
       <div class="flex column">
-        <img src="/images/designbig.jpg" alt="">
+        <img src="images/designbig.jpg" alt="">
         <p>Design Quality</p>
         <p>Our design is the best, we craft it with a very high quality from scratch.</p>
       </div>
       <div>
-        <img src="/images/price.png" alt="">
+        <img src="images/price.png" alt="">
         <p>Cheap Price</p>
         <p>Our design is the cheapest. We create it from scratch.</p>
       </div>
       <div>
-        <img src="/images/performance.jpg" alt="">
+        <img src="images/performance.jpg" alt="">
         <p>Amazing Performance</p>
         <p>Our code is clean and professional. The speed and performance are our targets.</p>
       </div>
     </section>
     
     <section id="third" class="flex">
-      <img src="/images/team.png" alt="">
+      <img src="images/team.png" alt="">
       <div class="flex column">
         <h3>About Us</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi laboriosam corrupti laudantium rerum aliquid asperiores, praesentium consectetur, nam est sunt delectus molestiae neque nemo fuga voluptate nobis quo, nulla incidunt. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore molestiae eius rem unde facere non delectus quae velit repellat maiores, magni sint fuga mollitia ut, ducimus distinctio deserunt asperiores? Minus.</p>
